// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Profile visual regression snapshots > matches profile header edit mode 1`] = `
<div
  class="bg-card border border-border rounded-lg p-5 sm:p-6"
>
  <div
    class="flex flex-col sm:flex-row items-start sm:items-center gap-5"
  >
    <div
      class="relative shrink-0 w-20 h-20"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%; min-width: 0px;"
      />
      <div
        class="absolute inset-[10px] rounded-full bg-primary flex items-center justify-center"
      >
        <span
          class="text-sm font-bold text-white tracking-wide"
        >
          AV
        </span>
      </div>
    </div>
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex flex-col gap-2 sm:flex-row sm:items-start sm:justify-between sm:gap-4"
      >
        <div>
          <h2
            class="text-xl font-semibold text-foreground leading-tight"
          >
            Aniruddh Vijay Vargia
          </h2>
          <p
            class="text-sm text-muted-foreground mt-0.5"
          >
            aniruddh.125613@stu.upes.ac.in
          </p>
        </div>
        <span
          class="text-sm font-bold shrink-0 whitespace-nowrap text-success"
        >
          90
          % complete
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2 mt-3"
      >
        <span
          class="inline-flex items-center gap-1.5 text-[11px] font-medium text-muted-foreground bg-muted/60 border border-border rounded px-2.5 py-1"
        >
          <svg
            class="lucide lucide-hash "
            fill="none"
            height="10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
           SAP 
          500125613
        </span>
        <span
          class="inline-flex items-center gap-1.5 text-[11px] font-medium text-muted-foreground bg-muted/60 border border-border rounded px-2.5 py-1"
        >
          <svg
            class="lucide lucide-hash "
            fill="none"
            height="10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
           
          R2142231769
        </span>
        <span
          class="inline-flex items-center gap-1.5 text-[11px] font-medium text-muted-foreground bg-muted/60 border border-border rounded px-2.5 py-1"
        >
          AIML
        </span>
        <span
          class="inline-flex items-center gap-1.5 text-[11px] font-medium text-muted-foreground bg-muted/60 border border-border rounded px-2.5 py-1"
        >
          <svg
            class="lucide lucide-calendar "
            fill="none"
            height="10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
           Batch 
          2027
        </span>
      </div>
    </div>
  </div>
  <div
    class="mt-4 flex flex-col gap-2 border-t border-border pt-4 sm:flex-row sm:items-center"
  >
    <button
      class="inline-flex h-8 w-full items-center justify-center gap-2 rounded bg-primary px-3 text-sm font-medium text-white transition-colors hover:bg-primary/90 disabled:opacity-50 sm:w-auto"
    >
      <svg
        class="lucide lucide-save "
        fill="none"
        height="13"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="13"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
        />
        <polyline
          points="17 21 17 13 7 13 7 21"
        />
        <polyline
          points="7 3 7 8 15 8"
        />
      </svg>
      Save Changes
    </button>
    <button
      class="inline-flex h-8 w-full items-center justify-center gap-2 rounded border border-border px-3 text-sm font-medium text-muted-foreground transition-colors hover:bg-muted/60 hover:text-foreground sm:w-auto"
    >
      <svg
        class="lucide lucide-x "
        fill="none"
        height="13"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="13"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
       Cancel
    </button>
  </div>
</div>
`;

exports[`Profile visual regression snapshots > matches profile header view mode 1`] = `
<div
  class="bg-card border border-border rounded-lg p-5 sm:p-6"
>
  <div
    class="flex flex-col sm:flex-row items-start sm:items-center gap-5"
  >
    <div
      class="relative shrink-0 w-20 h-20"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%; min-width: 0px;"
      />
      <div
        class="absolute inset-[10px] rounded-full bg-primary flex items-center justify-center"
      >
        <span
          class="text-sm font-bold text-white tracking-wide"
        >
          AV
        </span>
      </div>
    </div>
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex flex-col gap-2 sm:flex-row sm:items-start sm:justify-between sm:gap-4"
      >
        <div>
          <h2
            class="text-xl font-semibold text-foreground leading-tight"
          >
            Aniruddh Vijay Vargia
          </h2>
          <p
            class="text-sm text-muted-foreground mt-0.5"
          >
            aniruddh.125613@stu.upes.ac.in
          </p>
        </div>
        <span
          class="text-sm font-bold shrink-0 whitespace-nowrap text-success"
        >
          90
          % complete
        </span>
      </div>
      <div
        class="flex flex-wrap gap-2 mt-3"
      >
        <span
          class="inline-flex items-center gap-1.5 text-[11px] font-medium text-muted-foreground bg-muted/60 border border-border rounded px-2.5 py-1"
        >
          <svg
            class="lucide lucide-hash "
            fill="none"
            height="10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
           SAP 
          500125613
        </span>
        <span
          class="inline-flex items-center gap-1.5 text-[11px] font-medium text-muted-foreground bg-muted/60 border border-border rounded px-2.5 py-1"
        >
          <svg
            class="lucide lucide-hash "
            fill="none"
            height="10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="20"
              y1="9"
              y2="9"
            />
            <line
              x1="4"
              x2="20"
              y1="15"
              y2="15"
            />
            <line
              x1="10"
              x2="8"
              y1="3"
              y2="21"
            />
            <line
              x1="16"
              x2="14"
              y1="3"
              y2="21"
            />
          </svg>
           
          R2142231769
        </span>
        <span
          class="inline-flex items-center gap-1.5 text-[11px] font-medium text-muted-foreground bg-muted/60 border border-border rounded px-2.5 py-1"
        >
          AIML
        </span>
        <span
          class="inline-flex items-center gap-1.5 text-[11px] font-medium text-muted-foreground bg-muted/60 border border-border rounded px-2.5 py-1"
        >
          <svg
            class="lucide lucide-calendar "
            fill="none"
            height="10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
           Batch 
          2027
        </span>
      </div>
    </div>
  </div>
  <div
    class="mt-4 flex flex-col gap-2 border-t border-border pt-4 sm:flex-row sm:items-center"
  >
    <button
      class="inline-flex h-8 w-full items-center justify-center gap-2 rounded bg-primary px-3 text-sm font-medium text-white transition-colors hover:bg-primary/90 sm:w-auto"
    >
      <svg
        class="lucide lucide-pencil "
        fill="none"
        height="13"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="13"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
       Edit Profile
    </button>
  </div>
</div>
`;

exports[`Profile visual regression snapshots > matches tab nav active states 1`] = `
<div
  aria-label="Profile sections"
  class="grid grid-cols-4 items-stretch border-b border-border"
  role="tablist"
>
  <button
    aria-controls="profile-tabpanel-identity"
    aria-selected="true"
    class="relative flex min-w-0 flex-col items-center justify-center gap-1 px-2 py-2.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:flex-row sm:gap-2 sm:px-4 sm:py-3 sm:text-sm text-foreground"
    id="profile-tab-identity"
    role="tab"
    tabindex="0"
    type="button"
  >
    <svg
      class="lucide lucide-user shrink-0"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
      />
      <circle
        cx="12"
        cy="7"
        r="4"
      />
    </svg>
    <span
      class="max-w-full truncate text-[11px] sm:text-sm"
    >
      Identity
    </span>
    <div
      class="absolute bottom-0 left-0 right-0 h-0.5 bg-primary rounded-full"
    />
  </button>
  <button
    aria-controls="profile-tabpanel-skills"
    aria-selected="false"
    class="relative flex min-w-0 flex-col items-center justify-center gap-1 px-2 py-2.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:flex-row sm:gap-2 sm:px-4 sm:py-3 sm:text-sm text-muted-foreground hover:text-foreground"
    id="profile-tab-skills"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <svg
      class="lucide lucide-zap shrink-0"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
      />
    </svg>
    <span
      class="max-w-full truncate text-[11px] sm:text-sm"
    >
      Skills
    </span>
  </button>
  <button
    aria-controls="profile-tabpanel-projects"
    aria-selected="false"
    class="relative flex min-w-0 flex-col items-center justify-center gap-1 px-2 py-2.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:flex-row sm:gap-2 sm:px-4 sm:py-3 sm:text-sm text-muted-foreground hover:text-foreground"
    id="profile-tab-projects"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <svg
      class="lucide lucide-folder-open shrink-0"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
      />
    </svg>
    <span
      class="max-w-full truncate text-[11px] sm:text-sm"
    >
      Projects
    </span>
  </button>
  <button
    aria-controls="profile-tabpanel-documents"
    aria-selected="false"
    class="relative flex min-w-0 flex-col items-center justify-center gap-1 px-2 py-2.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:flex-row sm:gap-2 sm:px-4 sm:py-3 sm:text-sm text-muted-foreground hover:text-foreground"
    id="profile-tab-documents"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <svg
      class="lucide lucide-file-text shrink-0"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
      />
      <path
        d="M14 2v4a2 2 0 0 0 2 2h4"
      />
      <path
        d="M10 9H8"
      />
      <path
        d="M16 13H8"
      />
      <path
        d="M16 17H8"
      />
    </svg>
    <span
      class="max-w-full truncate text-[11px] sm:text-sm"
    >
      Documents
    </span>
  </button>
</div>
`;

exports[`Profile visual regression snapshots > matches tab nav active states 2`] = `
<div
  aria-label="Profile sections"
  class="grid grid-cols-4 items-stretch border-b border-border"
  role="tablist"
>
  <button
    aria-controls="profile-tabpanel-identity"
    aria-selected="false"
    class="relative flex min-w-0 flex-col items-center justify-center gap-1 px-2 py-2.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:flex-row sm:gap-2 sm:px-4 sm:py-3 sm:text-sm text-muted-foreground hover:text-foreground"
    id="profile-tab-identity"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <svg
      class="lucide lucide-user shrink-0"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
      />
      <circle
        cx="12"
        cy="7"
        r="4"
      />
    </svg>
    <span
      class="max-w-full truncate text-[11px] sm:text-sm"
    >
      Identity
    </span>
  </button>
  <button
    aria-controls="profile-tabpanel-skills"
    aria-selected="false"
    class="relative flex min-w-0 flex-col items-center justify-center gap-1 px-2 py-2.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:flex-row sm:gap-2 sm:px-4 sm:py-3 sm:text-sm text-muted-foreground hover:text-foreground"
    id="profile-tab-skills"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <svg
      class="lucide lucide-zap shrink-0"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
      />
    </svg>
    <span
      class="max-w-full truncate text-[11px] sm:text-sm"
    >
      Skills
    </span>
  </button>
  <button
    aria-controls="profile-tabpanel-projects"
    aria-selected="false"
    class="relative flex min-w-0 flex-col items-center justify-center gap-1 px-2 py-2.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:flex-row sm:gap-2 sm:px-4 sm:py-3 sm:text-sm text-muted-foreground hover:text-foreground"
    id="profile-tab-projects"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <svg
      class="lucide lucide-folder-open shrink-0"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
      />
    </svg>
    <span
      class="max-w-full truncate text-[11px] sm:text-sm"
    >
      Projects
    </span>
  </button>
  <button
    aria-controls="profile-tabpanel-documents"
    aria-selected="true"
    class="relative flex min-w-0 flex-col items-center justify-center gap-1 px-2 py-2.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:flex-row sm:gap-2 sm:px-4 sm:py-3 sm:text-sm text-foreground"
    id="profile-tab-documents"
    role="tab"
    tabindex="0"
    type="button"
  >
    <svg
      class="lucide lucide-file-text shrink-0"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
      />
      <path
        d="M14 2v4a2 2 0 0 0 2 2h4"
      />
      <path
        d="M10 9H8"
      />
      <path
        d="M16 13H8"
      />
      <path
        d="M16 17H8"
      />
    </svg>
    <span
      class="max-w-full truncate text-[11px] sm:text-sm"
    >
      Documents
    </span>
    <div
      class="absolute bottom-0 left-0 right-0 h-0.5 bg-primary rounded-full"
    />
  </button>
</div>
`;
